# fluent-templates

./: .release-plz.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
macros/: CHANGELOG.md  Cargo.toml
macros/src/: lib.rs
src/: error.rs  fs.rs  helper.rs  languages.rs  lib.rs  loader.rs
src/helper/: handlebars.rs  tera.rs
src/loader/: arc_loader.rs  handlebars.rs  minijinja.rs  multi_loader.rs  shared.rs  static_loader.rs  tera.rs
templates/: Cargo.toml
templates/src/: error.rs  fs.rs  lib.rs  loader.rs
templates/src/helper/: handlebars.rs
templates/src/loader/: arc_loader.rs  handlebars.rs  shared.rs  static_loader.rs  tera.rs
templates/tests/: template.rs
templates/tests/locales/de/: main.ftl
templates/tests/locales/en-US/: main.ftl
templates/tests/locales/fr/: main.ftl
tests/: multi_loader.rs  template.rs
tests/locales/: en-US.ftl
tests/locales/de/: main.ftl
tests/locales/en-US/: main.ftl
tests/locales/fr/: main.ftl
tests/locales/zh/: main.ftl
tests/locales/zh-CN/: main.ftl
tests/locales/zh-TW/: main.ftl
