[workspace]
members = [".", "macros"]

[package]
name = "fluent-templates"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
resolver = "2"
rust-version = "1.70.0"

[workspace.package]
edition = "2021"
version = "0.9.1"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fluent-templates/"
repository = "https://github.com/XAMPPRocky/fluent-templates"
authors = ["XAMPPRocky <xampprocky@icloud.com>"]
description = "Templating for the Fluent localization framework"
keywords = ["handlebars", "tera", "fluent", "internationalization", "localization"]
categories = ["internationalization", "localization", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["macros", "use-ignore"]
macros = ["fluent-template-macros"]
use-ignore = ["ignore", "fluent-template-macros/ignore"]

[dependencies]
handlebars = { version = "5", optional = true }
fluent = "0.16"
fluent-bundle = "0.15.2"
fluent-syntax = "0.11"
fluent-langneg = "0.13"
serde_json = "1.0.79"
unic-langid = { version = "0.9.0", features = ["macros"] }
thiserror = "1.0.58"
tera = { version = "1.15.0", optional = true, default-features = false }
heck = "0.4.0"
ignore = { version = "0.4.18", optional = true }
flume = { version = "0.11.0", default-features = false }
log = "0.4.14"
fluent-template-macros = { path = "./macros", optional = true, version = "0.9.1" }
once_cell = "1.10.0"
arc-swap = "1.5.0"
intl-memoizer = "0.5.1"
walkdir = { version = "2.3.3", optional = true }

[dev-dependencies]
tempfile = "3.3.0"
getrandom = { version = "0.2.0", features = ["js"] }
