[package]
name = "fluent-template-macros"
version = "0.8.0"
authors = ["XAMPPRocky <xampprocky@icloud.com>"]
edition = "2018"
description = "Macro Templating for the Fluent localization framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fluent-templates/"
repository = "https://github.com/XAMPPRocky/fluent-templates"
keywords = ["handlebars", "tera", "fluent", "internationalization", "localization"]
categories = ["internationalization", "localization", "template-engine"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ignore"]

[dependencies]
quote = "1.0.15"
syn = { version = "1.0.88", features = ["full"] }
proc-macro2 = "1.0.36"
once_cell = "1.10.0"
ignore = { version = "0.4.16", optional = true }
flume = { version = "0.10.12", default-features = false }
unic-langid = "0.9.0"
walkdir = { version = "2.3.3", optional = true }
