[package]
name = "fluent-template-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
resolver = "2"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ignore"]

[dependencies]
quote = "1.0.15"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0.36"
once_cell = "1.10.0"
ignore = { version = "0.4.16", optional = true }
flume = { version = "0.10.12", default-features = false }
unic-langid = "0.9.0"
walkdir = { version = "2.3.3", optional = true }
