[package]
name = "fluent-templates"
version = "0.4.8"
authors = ["XAMPPRocky <xampprocky@icloud.com>"]
edition = "2018"
description = "Templating for the Fluent localization framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fluent-templates/"
repository = "https://github.com/XAMPPRocky/fluent-templates"
keywords = ["handlebars", "tera", "fluent", "internationalization", "localization"]
categories = ["internationalization", "localization", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
macros = ["fluent-template-macros"]

[dependencies]
handlebars = { version = "3", optional = true }
lazy_static = "1.2.0"
fluent = "0.12"
fluent-bundle = "0.12"
fluent-syntax = "0.9.3"
fluent-langneg = "0.13"
serde_json = "1.0"
unic-langid = { version = "0.9.0", features = ["macros"] }
snafu = "0.6.6"
tera = { version = "1.2.0", optional = true }
heck = "0.3.1"
ignore = "0.4.16"
flume = "0.7.1"
log = "0.4.8"
fluent-template-macros = { path = "../macros", optional = true }
once_cell = "1.4.0"
arc-swap = "0.4.7"

[dev-dependencies]
tempfile = "3.1.0"
